src/gateway/manifests/ingress.yaml
# allows traffic to access our gateway endpoint - acts as a loadbalancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  # we will use default ingress "nginx-ingress"
  annotations:
    # we want ingress to allow any body size (large) to upload
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
